--- a/css/styles.less.css
+++ b/css/styles.less.css
@@ -6735,6 +6735,7 @@ button.close {
 	display: inline-block;
 	vertical-align: middle;
 }*/
+/* Variables */
 body {
   margin: 0;
   padding: 0;
@@ -6745,7 +6746,7 @@ body {
   margin-left: 0px;
   margin-right: 0px;
 }
-.main-col .col-aside {
+.main-col .col-aside-left {
   float: left;
   width: 100%;
   position: relative;
@@ -6754,12 +6755,19 @@ body {
   padding-right: 0px;
 }
 @media (min-width: 768px) {
-  .main-col .col-aside {
+  .main-col .col-aside-left {
     float: left;
     width: 25%;
   }
 }
+@media (min-width: 1200px) {
+  .main-col .col-aside-left {
+    float: left;
+    width: 14.16666667%;
+  }
+}
 .main-col .col-main {
+  padding-left: 30px !important;
   float: left;
   width: 100%;
   position: relative;
@@ -6773,31 +6781,59 @@ body {
     width: 75%;
   }
 }
+@media (min-width: 1200px) {
+  .main-col .col-main {
+    float: left;
+    width: 52.5%;
+  }
+}
+.main-col .col-aside-right {
+  min-height: 1225px !important;
+  padding-left: 30px !important;
+  background-color: #e3e3e3;
+  float: left;
+  width: 100%;
+  position: relative;
+  min-height: 1px;
+  padding-left: 0px;
+  padding-right: 0px;
+}
+@media (min-width: 768px) {
+  .main-col .col-aside-right {
+    margin-left: 25px;
+  }
+}
+@media (min-width: 1200px) {
+  .main-col .col-aside-right {
+    float: left;
+    width: 25%;
+  }
+}
+@media (min-width: 1200px) {
+  .main-col .col-aside-right {
+    margin-left: 8.33333333%;
+  }
+}
 header {
+  position: relative;
   padding: 30px 0;
   background-color: #98cc30;
   color: #fff;
+  /*& > .container {
+    position: relative;
+    overflow: hidden;
+    background-color: lighten(@main-color, 10%);
+  }*/
 }
-header > .container {
-  position: relative;
-  /*overflow: hidden;*/
-  /*background-color: lighten(#98cc30, 10%);*/
-}
-header > .container:after {
+header:after {
   content: " ";
   position: absolute;
-  left: 60px;
-  bottom: -51px;
+  left: 75px;
+  bottom: -20px;
   display: block;
   width: 60px;
   height: 56px;
   background-image: url("../img/fleche.png");
-}
-header .photo {
-  display: inline-block;
-  width: 150px;
-  height: 150px;
-  background-image: url("../img/portrait_petit.jpg");
 }
 header h1 {
   margin-top: 30px;
@@ -6805,6 +6841,7 @@ header h1 {
   color: #000;
 }
 header h2 {
+  position: relative;
   display: block;
   margin: 0;
   font-family: "Oswald", sans-serif;
@@ -6834,13 +6871,59 @@ header {
   font-size: 1.6rem;
 }
 aside {
-  min-height: 1330px;
-  padding-top: 304px;
-  background-color: #cacaca;
+  min-height: 1225px;
+  padding-top: 60px;
+  padding-bottom: 60px;
+  padding-right: 30px;
+  background-color: #e3e3e3;
+}
+@media (min-width: 1200px) {
+  aside {
+    padding-bottom: 0;
+  }
+}
+aside h1 {
+  font-size: 1.4rem;
+  line-height: 2.1rem;
+}
+aside h2 {
+  display: block;
+  padding: 10px 5px;
+  background-color: #98cc30;
+  font-size: 2rem;
+  font-weight: 700;
+  color: #fff;
+  text-align: center;
+}
+@media (min-width: 768px) and (max-width: 1199px) {
+  aside h2 {
+    word-wrap: break-word;
+  }
 }
 aside h2 + ul {
   padding-left: 0;
   list-style: none;
+}
+aside h2 small {
+  display: block;
+  margin-top: 5px;
+  color: #fff;
+}
+aside a {
+  color: #000;
+  text-decoration: underline;
+  transition: color ease 0.6s;
+}
+aside a:hover {
+  color: #98cc30;
+}
+aside .photo {
+  display: block;
+  width: 150px;
+  height: 150px;
+  margin: auto;
+  border-radius: 150px;
+  background-image: url("../img/portrait_petit.jpg");
 }
 aside nav ul {
   padding-left: 0;
@@ -6848,12 +6931,17 @@ aside nav ul {
 aside nav ul li {
   list-style: none;
 }
+aside nav ul li + li {
+  margin-top: 15px;
+}
 aside nav ul li a {
   position: relative;
   display: inline-block;
-  width: 100px;
   height: 30px;
   padding: 0 15px;
+  font-size: 2rem;
+  color: #000;
+  text-decoration: none;
   /*&:hover, &:focus {
                         text-decoration: none;
                         &:before, &:after {
@@ -6892,14 +6980,66 @@ aside nav ul li a:after {
   bottom: 0;
   right: 0;
 }
+aside nav ul li a:hover,
+aside nav ul li a:focus {
+  color: #000;
+  text-decoration: none;
+}
 aside nav ul li a:hover:before,
 aside nav ul li a:focus:before,
 aside nav ul li a:hover:after,
 aside nav ul li a:focus:after {
   height: 100%;
 }
+@media (max-width: 767px) {
+  aside .coords,
+  aside .reseaux_sociaux {
+    text-align: center;
+  }
+}
+aside .coords {
+  margin-top: 50px;
+}
+aside .coords ul {
+  padding-left: 0;
+}
+aside .coords ul li {
+  list-style: none;
+}
 aside .coords .cp {
   margin-left: 26px;
+}
+aside .reseaux_sociaux {
+  margin-top: 30px;
+}
+aside .reseaux_sociaux ul {
+  padding-left: 0;
+}
+aside .reseaux_sociaux ul li {
+  display: inline-block;
+  list-style: none;
+}
+aside .reseaux_sociaux ul li a {
+  display: block;
+  width: 30px;
+  height: 30px;
+  opacity: 0.7;
+  filter: alpha(opacity=70);
+  transition: opacity 0.6s ease;
+}
+aside .reseaux_sociaux ul li a:hover,
+aside .reseaux_sociaux ul li a:focus {
+  opacity: 1;
+  filter: alpha(opacity=100);
+}
+aside .reseaux_sociaux ul li a.github {
+  background-image: url("../img/ico_github.png");
+}
+aside .reseaux_sociaux ul li a.linkedin {
+  background-image: url("../img/ico_linkedin.png");
+}
+aside .reseaux_sociaux ul li a.viadeo {
+  background-image: url("../img/ico_viadeo.png");
 }
 aside .glyphicon {
   margin-right: 10px;
@@ -6910,8 +7050,20 @@ main h3 {
   text-transform: uppercase;
 }
 main h2 {
+  position: relative;
   margin-bottom: 20px;
+  padding-left: 15px;
   font-size: 3rem;
+}
+main h2:before {
+  content: " ";
+  position: absolute;
+  top: 0;
+  left: 0;
+  display: block;
+  width: 5px;
+  height: 100%;
+  background-color: #98cc30;
 }
 main h3 {
   margin: 0;
@@ -6921,6 +7073,7 @@ main section {
   margin-top: 30px;
 }
 main .experience {
+  /*a*/
   /*a*/
 }
 main .experience + .experience {
@@ -6947,8 +7100,34 @@ main .experience .entreprise:after {
   margin-left: 5px;
   font-family: "Glyphicons Halflings";
 }
+@media (min-width: 768px) and (max-width: 1199px) {
+  main .experience .entreprise {
+    font-weight: 600;
+  }
+}
+main .experience .more {
+  display: inline-block;
+  margin-top: 10px;
+  padding: 5px 10px;
+  vertical-align: middle;
+  text-align: center;
+  border-radius: 5px;
+  background-color: #ccc;
+  color: #fff;
+  transition: background-color ease 0.6s;
+}
+main .experience .more:hover,
+main .experience .more:focus {
+  text-decoration: none;
+  background-color: #999999;
+}
 main .formation + .formation {
   margin-top: 30px;
+}
+@media (max-width: 767px) {
+  main .formation small {
+    display: block;
+  }
 }
 main .competences_dev h3,
 main .logiciels h3,
@@ -6960,6 +7139,9 @@ main .competences_dev article + article,
 main .logiciels article + article,
 main .langues article + article {
   margin-top: 10px;
+}
+main .autres_competences {
+  margin-bottom: 30px;
 }
 main .point {
   position: relative;
@@ -6986,6 +7168,137 @@ main .point.rempli:after {
   border: 1px solid #555555;
   border-radius: 18px;
   background-color: #98cc30;
+}
+#modal_more .modal-header {
+  border-bottom: none;
+}
+#modal_more .modal-header .modal-title {
+  position: relative;
+  margin-bottom: 0;
+  padding-left: 15px;
+  font-size: 2.5rem;
+  text-transform: uppercase;
+}
+#modal_more .modal-header .modal-title:before {
+  content: " ";
+  position: absolute;
+  top: 0;
+  left: 0;
+  display: block;
+  height: 100%;
+  width: 5px;
+  background-color: #98cc30;
+}
+#modal_more .modal-body {
+  font-size: 1.4rem;
+}
+#modal_more .modal-body h2 {
+  margin-top: 0;
+  font-size: 2.3rem;
+}
+#modal_more .modal-body h3 {
+  margin-bottom: 20px;
+  font-size: 2rem;
+}
+#modal_more .modal-body h4 {
+  margin-top: 20px;
+  margin-bottom: 20px;
+  font-weight: 700;
+}
+#modal_more .modal-body .realisations {
+  margin-bottom: 50px;
+  /*ul*/
+}
+#modal_more .modal-body .realisations .images {
+  padding-left: 0;
+}
+#modal_more .modal-body .realisations .images li + li {
+  margin-top: 10px;
+}
+#modal_more .modal-body .realisations .images li {
+  position: relative;
+  display: block;
+  width: 100%;
+  height: 200px;
+  overflow: hidden;
+  -webkit-transform: skewX(0) skewY(-5deg);
+  -ms-transform: skewX(0) skewY(-5deg);
+  -o-transform: skewX(0) skewY(-5deg);
+  transform: skewX(0) skewY(-5deg);
+  list-style: none;
+}
+#modal_more .modal-body .realisations .images li a {
+  position: relative;
+  display: block;
+  -webkit-transform: skewX(0) skewY(5deg);
+  -ms-transform: skewX(0) skewY(5deg);
+  -o-transform: skewX(0) skewY(5deg);
+  transform: skewX(0) skewY(5deg);
+}
+#modal_more .modal-body .realisations .images li a:hover .illustration,
+#modal_more .modal-body .realisations .images li a:focus .illustration {
+  background-position: center bottom;
+  text-decoration: none;
+}
+#modal_more .modal-body .realisations .images li a:hover .infos,
+#modal_more .modal-body .realisations .images li a:focus .infos {
+  opacity: 1;
+  filter: alpha(opacity=100);
+}
+#modal_more .modal-body .realisations .images li a .illustration {
+  width: 100%;
+  height: 250px;
+  margin-top: -25px;
+  vertical-align: middle;
+  background-size: cover;
+  background-position: center top;
+  background-repeat: no-repeat;
+  transition: background-position ease 5s;
+}
+#modal_more .modal-body .realisations .images li a .illustration:after {
+  content: " ";
+  position: absolute;
+  top: 0;
+  left: 0;
+  display: block;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  pointer-events: none;
+}
+#modal_more .modal-body .realisations .images li a .infos {
+  position: absolute;
+  top: 0;
+  z-index: 1;
+  padding: 70px 20px 0 20px;
+  font-size: 2rem;
+  font-weight: 700;
+  color: #fff;
+  opacity: 0.7;
+  filter: alpha(opacity=70);
+  transition: opacity ease 0.6s;
+}
+#modal_more .modal-footer {
+  border: none;
+}
+#modal_more .modal-footer button {
+  position: absolute;
+  bottom: -20px;
+  left: 50%;
+  width: 40px;
+  height: 40px;
+  line-height: 25px;
+  border-radius: 40px;
+  margin-left: -20px;
+  background-color: #98cc30;
+  border: none;
+  font-size: 2rem;
+  color: #fff;
+  transition: background-color ease 0.6s;
+}
+#modal_more .modal-footer button:hover,
+#modal_more .modal-footer button:focus {
+  background-color: #79a326;
 }
 footer {
   height: 30px;
