--- a/css/styles.less.css
+++ b/css/styles.less.css
@@ -6899,6 +6899,11 @@ aside {
     padding-bottom: 60px;
   }
 }
+@media (min-width: 768px) {
+  aside {
+    min-height: 1475px;
+  }
+}
 @media (min-width: 1200px) {
   aside {
     min-height: 1225px;
@@ -7196,6 +7201,13 @@ main .langues h3 {
   color: #777777;
   text-transform: none;
 }
+@media (min-width: 768px) and (max-width: 1199px) {
+  main .competences_dev h3,
+  main .logiciels h3,
+  main .langues h3 {
+    margin-bottom: 10px;
+  }
+}
 main .competences_dev article + article,
 main .logiciels article + article,
 main .langues article + article {
@@ -7245,6 +7257,13 @@ main .point {
   border-radius: 26px;
   background-color: #ffffff;
 }
+@media (min-width: 768px) and (max-width: 1199px) {
+  main .point {
+    width: 15px;
+    height: 15px;
+    border-radius: 15px;
+  }
+}
 main .point + .point {
   margin-left: 5px;
 }
@@ -7261,6 +7280,16 @@ main .point.rempli:after {
   border: 1px solid #555555;
   border-radius: 18px;
   background-color: #98cc30;
+}
+@media (min-width: 768px) and (max-width: 1199px) {
+  main .point.rempli:after {
+    width: 16px;
+    height: 16px;
+    top: -1.3px;
+    left: -1.5px;
+    margin-top: 0;
+    margin-left: 0;
+  }
 }
 #modal_more .modal-header {
   border-bottom: none;
