--- a/css/styles.less.css
+++ b/css/styles.less.css
@@ -7128,6 +7128,20 @@ main section.loisirs {
     margin-bottom: auto;
   }
 }
+@media (min-width: 768px) and (max-width: 991px) {
+  main section.loisirs ul {
+    padding-left: 0;
+  }
+  main section.loisirs ul li {
+    display: inline;
+  }
+  main section.loisirs ul li:after {
+    content: ",";
+  }
+  main section.loisirs ul li:last-child:after {
+    content: none;
+  }
+}
 main .experience {
   /*a*/
   /*a*/
